--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,40 @@
 /* Contenue */
-html, #content {
+html, #contenu {
   width: 100%;
   height: 100%;
+}
+
+h2 {
+  font-size: 4rem;
+}
+
+/* Menu */
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 120px;
+  z-index: 3;
+  background-color: #fff;
+  padding: 20px;
+}
+
+#menu ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+#menu li {
+  min-width: 100px;
+}
+
+#menu a {
+  color: #333;
+  font-size: 2rem;
 }
 
 /* Presentation */
@@ -18,12 +51,14 @@ html, #content {
   justify-content: center;
   flex-flow: column wrap;
   color: #fff;
+  margin-top: 100px;
+  font-size: 2rem;
 }
 
 #presentation::after {
   content: "";
   background-color: #000;
-  opacity: 0.5;
+  opacity: 0.9;
   height: 100%;
   width: 100%;
   position: absolute;
@@ -31,14 +66,23 @@ html, #content {
   left: 0;
 }
 
-#presentation h1 {
+.pres_texte {
+  z-index: 3;
+  text-align: center;
+}
+
+.pres_texte strong {
+  font-size: 2.5rem;
+}
+
+.pres_texte h1 {
   font-family: 'Bubbler One', sans-serif;
-  font-size: 5rem;
+  font-size: 8rem;
   margin: 0;
 }
 
-#presentation p {
-  text-align: center;
+.pres_texte p {
+  margin: 0 0 10px 0;
 }
 
 /* Histoire */
