--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,12 @@ header {
 
 }
 
+/* Contact */
+#carte {
+  width: 1280px;
+  height: 450px;
+}
+
 /* Responsive */
 @media screen and (max-width: 1280px) {
   body {
