--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ h2 {
   font-size: 4rem;
 }
 
-/* Menu */
+/* Navigation */
 header {
   position: fixed;
   top: 0;
@@ -21,7 +21,7 @@ header {
   padding: 20px;
 }
 
-#menu ul {
+#navigation ul {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -29,11 +29,11 @@ header {
   flex-wrap: wrap;
 }
 
-#menu li {
+#navigation li {
   min-width: 100px;
 }
 
-#menu a {
+#navigation a {
   color: #333;
   font-size: 2rem;
 }
@@ -104,117 +104,32 @@ header {
   max-width: 1280px;
   margin: 50px auto;
   padding: 20px;
-  background-color: #d0f0c0;
   text-align: left;
-}
-
-.produit_text {
-  max-width: 420px;
-  margin: 40px;
-}
-
-.produit_text img {
-  max-width: 420px;
-}
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 860px;
   position: relative;
-  margin: auto;
 }
 
-/* Hide the images by default */
-.mySlides {
-  display: none;
+.produits_img {
+  width: 60%;
+
 }
 
-.mySlides1 img, .mySlides2 img {
-  width: 100%;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
+.produits_text {
+  max-width: 420px;
+  background-color: #d0f0c0;
   position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
+  right: 150px;
   top: 0;
+  padding: 40px;
 }
 
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+.produits_text img {
+  max-width: 350px;
+  display: block;
+  margin: 0 auto;
 }
 
 /* sante */
+/* À refaire pour pop up
 #sante {
   max-width: 1280px;
   margin: 50px auto;
@@ -233,13 +148,24 @@ header {
 .etape img {
   max-width: 100px;
 }
+*/
+
 
 /* Menu */
 #menu {
+  max-width: 1280px;
 
+  margin: 50px auto;
+  padding: 20px;
 }
 
+#menu li, #menu p, #menu h3 {
+  text-align: left;
+}
+
+
 /* Contact */
+
 #carte {
   width: 1280px;
   height: 450px;
