--- a/css/styles.css
+++ b/css/styles.css
@@ -17,8 +17,7 @@ header {
   width: 100%;
   height: 100px;
   z-index: 4;
-  background-color: #fff;
-  padding: 20px;
+  padding: 10px;
 }
 
 #navigation ul {
@@ -27,20 +26,22 @@ header {
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
+  width: 900px;
+  margin: 20px auto;
 }
 
 #navigation li {
-  min-width: 100px;
+  min-width: 50px;
 }
 
 #navigation a {
-  color: #333;
+  color: #fff;
   font-size: 2rem;
 }
 
 /* Presentation */
 #presentation {
-  background-image: url('../images/devanture.jpg');
+  background-image: url('../images/reflet.jpg');
   background-position: center;
   -webkit-background-size: cover;
   background-size: cover;
@@ -49,17 +50,16 @@ header {
   position: relative;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: end;
   flex-flow: column wrap;
   color: #fff;
-  margin-top: 120px;
   font-size: 2rem;
 }
 
 #presentation::after {
   content: "";
   background-color: #000;
-  opacity: 0.7;
+  opacity: 0.2;
   height: 100%;
   width: 100%;
   position: absolute;
@@ -75,14 +75,16 @@ header {
   font-size: 2.5rem;
 }
 
+/*
 .pres_texte h1 {
   font-family: 'Bubbler One', sans-serif;
   font-size: 8rem;
   margin: 0;
 }
+*/
 
 .pres_texte p {
-  margin: 0 0 10px 0;
+  margin: 0 0 50px 0;
 }
 
 
@@ -100,7 +102,7 @@ header {
 }
 
 /* Produits */
-#produits {
+#produits, #histoire {
   position: relative;
   display: flex;
   flex-flow: row nowrap;
@@ -131,14 +133,65 @@ header {
 
 /* Menu */
 #menu {
-  max-width: 1280px;
-
+  width: 800px;
+  height: 400px;
   margin: 50px auto;
   padding: 20px;
 }
 
 #menu li, #menu p, #menu h3 {
   text-align: left;
+}
+
+/* Menu : Style the tab */
+.tab {
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+}
+
+/* Menu : Style the buttons inside the tab */
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+  font-size: 17px;
+}
+
+/* Menu : Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Menu : Create an active/current tablink class */
+.tab button.active {
+  background-color: #ccc;
+}
+
+/* Menu : Style the tab content */
+.tabcontent {
+  display: none;
+  height: 300px; /* À confirmer le style */
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
+  -webkit-animation: fadeEffect 1s;
+  animation: fadeEffect 1s;
+}
+
+/* Fade in tabs */
+@-webkit-keyframes fadeEffect {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
+
+@keyframes fadeEffect {
+  from {opacity: 0;}
+  to {opacity: 1;}
 }
 
 
